--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Display a Photo</title>
 </head>
 <body>
-    <h1>Here is the photo:</h1>
+    <h1>Here is da chook:</h1>
     <img src="https://media.istockphoto.com/id/831791190/photo/hen.jpg?s=1024x1024&w=is&k=20&c=qgX80VKz02jM1DqSONqK5Dr-C8yGYRs5i4rzk2a0QZU=" alt="A beautiful photo" style="max-width:100%; height:auto;">
 </body>
 </html>
