--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display a Photo</title>
+    <title>DaChook Dot Com</title>
 </head>
 <body>
     <h1>Here is da chook:</h1>
