colour and gif change

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="background-color: red;">
 <h1>Oh Hiya</h1>
 <p>I just wrote my first website.</p>
 </body>
@@ -13,8 +13,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DaChook Dot Com</title>
 </head>
-<body>
+<body style="background-color: red;">
     <h1>Here is da chook:</h1>
-    <img src="https://media.istockphoto.com/id/831791190/photo/hen.jpg?s=1024x1024&w=is&k=20&c=qgX80VKz02jM1DqSONqK5Dr-C8yGYRs5i4rzk2a0QZU=" alt="A beautiful photo" style="max-width:100%; height:auto;">
+    <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExdzRtN3c2NG9vcm83cWNtd2dtcjc1NG92enN5aTVoM3hmbXRzaTduayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/0hLOxvKJHArT2OjHba/giphy.webp" alt="A beautiful photo" style="max-width:100%; height:auto;">
 </body>
 </html>
